fix: Fixed z-index in showModalDisplay class in modal.scss.

--- a/src/styles/components/modal.scss
+++ b/src/styles/components/modal.scss
@@ -19,7 +19,7 @@
 
 .showModalDisplay {
   opacity: 1;
-  z-index: 100;
+  z-index: 101;
 }
 
 .modal-container {
